# libmypaint-rs

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml
codegen/: gen_brush_settings.py
src/: brush.rs  brush_modes.rs  ffi.rs  helpers.rs  lib.rs  mapping.rs  rng_double.rs
src/brush_settings/: mod.rs
